<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cn.zorcc</groupId>
  <artifactId>tenet</artifactId>
  <version>0.0.1</version>
  <modules>
    <module>common</module>
    <module>orm</module>
    <module>app</module>
    <module>mint</module>
    <module>gateway</module>
    <module>http</module>
  </modules>
  <packaging>pom</packaging>
  <name>tenet</name>
  <url>http://cn.zorcc</url>
  <description>A simple, fast, easy, lightweight library to build distributed microservice system</description>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>benrush</name>
      <email>benrush0705@gmail.com</email>
    </developer>
  </developers>

  <properties>
    <java.version>22</java.version>
    <resource.delimiter>@</resource.delimiter>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
    <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
    <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
    <jmh.version>1.37</jmh.version>
    <junit.version>5.10.1</junit.version>

    <scram.version>2.1</scram.version>
    <jctools.version>4.0.2</jctools.version>
  </properties>

  <!-- general dependencies for all modules -->

  <dependencies>

    <!-- junit  -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!--  jmh   -->
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-core</artifactId>
      <version>${jmh.version}</version>
    </dependency>
    <dependency>
      <groupId>org.openjdk.jmh</groupId>
      <artifactId>jmh-generator-annprocess</artifactId>
      <version>${jmh.version}</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <encoding>${maven.compiler.encoding}</encoding>
          <parameters>true</parameters> <!-- adding -parameter so that java reflection could see the parameter names -->
          <source>${java.version}</source>
          <target>${java.version}</target>
          <release>${java.version}</release>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <arg>--add-modules</arg>
            <arg>jdk.incubator.vector</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>org.openjdk.jmh</groupId>
              <artifactId>jmh-generator-annprocess</artifactId>
              <version>${jmh.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
    </plugins>
  </build>


</project>
